src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(Account__r.BillingStreet)), Account__r.BillingStreet + BR(), NULL) +
IF(NOT(ISBLANK(Account__r.BillingCity)), Account__r.BillingCity + BR(), NULL) +
IF(NOT(ISBLANK(Account__r.BillingState)), Account__r.BillingState, NULL) +
IF(NOT(ISBLANK(Account__r.BillingPostalCode)), &quot;, &quot; + Account__r.BillingPostalCode + BR(), NULL) +
IF(NOT(ISBLANK(Account__r.BillingCountry)), Account__r.BillingCountry, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>If (
 ISBLANK(Payment_Received_Date__c), 
TODAY()- Invoice_Due_Date__c, 
Payment_Received_Date__c - Invoice_Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Set up by integration to NetSuite</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>Commercial Operations</fullName>
                </value>
                <value>
                    <fullName>Contract Account Management</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Equity Account Management</fullName>
                </value>
                <value>
                    <fullName>Euro Real Estate Analytics</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>HSP AB Alert</fullName>
                </value>
                <value>
                    <fullName>HSP Account Management</fullName>
                </value>
                <value>
                    <fullName>HSP Advertising</fullName>
                </value>
                <value>
                    <fullName>HSP CM Alert</fullName>
                </value>
                <value>
                    <fullName>HSP Corporate</fullName>
                </value>
                <value>
                    <fullName>HSP Corporate : HSP Administrative</fullName>
                </value>
                <value>
                    <fullName>HSP Corporate : HSP Databases</fullName>
                </value>
                <value>
                    <fullName>HSP Corporate : HSP Executive</fullName>
                </value>
                <value>
                    <fullName>HSP Corporate : HSP Finance</fullName>
                </value>
                <value>
                    <fullName>HSP HF Alert</fullName>
                </value>
                <value>
                    <fullName>HSP Journalists</fullName>
                </value>
                <value>
                    <fullName>HSP Marketing</fullName>
                </value>
                <value>
                    <fullName>HSP News Production</fullName>
                </value>
                <value>
                    <fullName>HSP RE Alert</fullName>
                </value>
                <value>
                    <fullName>Loan Analytics</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>New Sales</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Quant</fullName>
                </value>
                <value>
                    <fullName>Real Estate Analytics</fullName>
                </value>
                <value>
                    <fullName>REIT Research</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Collection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>NetSuite Internal ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fifth_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fifth Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fourth_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fourth Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_Relationship_Transaction__c</fullName>
        <formula>Text(Account__r.Type)</formula>
        <label>GSA Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.FirstName</field>
                <operation>equals</operation>
                <value>Abby</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Terms__c</fullName>
        <formula>TEXT ( Opportunity__r.Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Status__c</fullName>
        <label>Outreach Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>1st Follow Up</fullName>
                </value>
                <value>
                    <fullName>2nd Follow Up</fullName>
                </value>
                <value>
                    <fullName>Final Notice</fullName>
                </value>
                <value>
                    <fullName>Perpetual Non-Payment</fullName>
                </value>
                <value>
                    <fullName>First Notice</fullName>
                </value>
                <value>
                    <fullName>Second Notice</fullName>
                </value>
                <value>
                    <fullName>Third Notice</fullName>
                </value>
                <value>
                    <fullName>Fourth Notice</fullName>
                </value>
                <value>
                    <fullName>Fifth notice</fullName>
                </value>
                <value>
                    <fullName>Sixth Notice</fullName>
                </value>
                <value>
                    <fullName>Seventh Notice</fullName>
                </value>
                <value>
                    <fullName>Exclude Collection</fullName>
                </value>
                <value>
                    <fullName>Confirmed Receipt</fullName>
                    <isActive>false</isActive>
                    <label>Confirmed Receipt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Received_Date__c</fullName>
        <inlineHelpText>This field will be updated when Status is changed to Paid In Full</inlineHelpText>
        <label>Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Prepared_By__c</fullName>
        <label>SO Prepared By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seventh_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seventh Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sixth_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sixth Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>NetSuite transaction status</description>
        <inlineHelpText>Set up by integration</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Paid In Full</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Deposited</fullName>
                </value>
                <value>
                    <fullName>Not Deposited</fullName>
                </value>
                <value>
                    <fullName>Unapproved Payment</fullName>
                </value>
                <value>
                    <fullName>Fully Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Transaction type from NetSuite</description>
        <inlineHelpText>Set by integration script</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Customer Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Subscription Year</inlineHelpText>
        <label>Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>Advisory_Invoices_Overdue</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Billing_Contact__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Outreach_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Advisory_Transactions</value>
        </filters>
        <label>Advisory Invoices Overdue</label>
        <sharedTo>
            <group>Advisory</group>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Final_Notice</fullName>
        <columns>SO_Prepared_By__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Outreach_Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterOrEqual</operation>
            <value>60</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Outreach_Status__c</field>
            <operation>equals</operation>
            <value>Sent,1st Follow Up,2nd Follow Up</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>lessThan</operation>
            <value>90</value>
        </filters>
        <label>Final Notice</label>
        <sharedTo>
            <role>Commercial_Operations</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Advertising_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SO_Prepared_By__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Outreach_Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Advisory_Transactions</value>
        </filters>
        <filters>
            <field>Outreach_Status__c</field>
            <operation>notEqual</operation>
            <value>Sent,1st Follow Up,2nd Follow Up,Final Notice,Perpetual Non-Payment,First Notice,Second Notice,Third Notice,Fourth Notice,Fifth notice,Sixth Notice,Seventh Notice,Exclude Collection</value>
        </filters>
        <filters>
            <field>SO_Prepared_By__c</field>
            <operation>notContain</operation>
            <value>Ally</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>A</value>
        </filters>
        <label>New Advertising Invoices</label>
        <sharedTo>
            <role>Commercial_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Advisory_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Billing_Contact__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Outreach_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Outreach_Status__c</field>
            <operation>notEqual</operation>
            <value>Sent,1st Follow Up,2nd Follow Up,Final Notice,Perpetual Non-Payment</value>
        </filters>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Advisory_Transactions</value>
        </filters>
        <label>New Advisory Invoices</label>
        <sharedTo>
            <role>Advisory</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Invoices_to_Send</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Notes__c</columns>
        <columns>Outreach_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/28/2020</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>a</value>
        </filters>
        <filters>
            <field>SO_Prepared_By__c</field>
            <operation>notContain</operation>
            <value>Pat</value>
        </filters>
        <filters>
            <field>Outreach_Status__c</field>
            <operation>notEqual</operation>
            <value>Sent,1st Follow Up,2nd Follow Up,Final Notice,Perpetual Non-Payment</value>
        </filters>
        <label>New Subscription Invoices</label>
    </listViews>
    <listViews>
        <fullName>Outstading_Sage_QuickFill_Invoices</fullName>
        <columns>SO_Prepared_By__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Outreach_Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Days_Overdue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>SO_Prepared_By__c</field>
            <operation>equals</operation>
            <value>sage/ quickfill</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>A</value>
        </filters>
        <label>Outstanding HSP Invoices</label>
        <sharedTo>
            <role>Administrative</role>
            <role>Commercial_Operations</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Perpetual_Non_Payment</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Outreach_Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterThan</operation>
            <value>90</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>A</value>
        </filters>
        <label>Perpetual Non- Payment</label>
        <sharedTo>
            <role>Commercial_Operations</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Subscription_Invoices_Overdue</fullName>
        <columns>SO_Prepared_By__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Outreach_Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Outreach_Status__c</field>
            <operation>equals</operation>
            <value>Sent,Confirmed Receipt</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>lessThan</operation>
            <value>31</value>
        </filters>
        <label>1st Follow-Up</label>
        <sharedTo>
            <role>Commercial_Operations</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transactions_Overdue</fullName>
        <columns>SO_Prepared_By__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Outreach_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Outreach_Status__c</field>
            <operation>equals</operation>
            <value>Sent,1st Follow Up,2nd Follow Up,Final Notice,Perpetual Non-Payment,Confirmed Receipt</value>
        </filters>
        <label>Subscription Invoices Overdue</label>
        <sharedTo>
            <role>Administrative</role>
            <role>BDR_Manager</role>
            <role>Commercial_Operations</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2nd_Follow_Up</fullName>
        <columns>SO_Prepared_By__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Outreach_Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterOrEqual</operation>
            <value>31</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Standard_Transaction</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>lessThan</operation>
            <value>60</value>
        </filters>
        <label>2nd Follow-Up</label>
        <sharedTo>
            <role>Commercial_Operations</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Advisory_Transactions</fullName>
        <active>true</active>
        <label>Advisory Transactions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Transaction</fullName>
        <active>true</active>
        <label>Standard Transaction</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>